# soniox-dictation

./: .env.sample  .gitignore  README.md  pyproject.toml  run.sh
scripts/: autostart-run.sh  gnome-shortcut.py  install-autostart.sh  install-gnome-shortcut.sh  key-action.sh  restart.sh  status.sh  stop.sh  toggle.sh  uninstall-autostart.sh  uninstall-gnome-shortcut.sh
src/soniox_dictation/: __init__.py  app.py  audio.py  command.py  config.py  gnome_shortcuts.py  inject.py  ipc.py  overlay.py  portal.py  soniox.py  soniox_async.py  xdotool.py  ydotool.py
